<resources>
    <string name="app_name">Speedometer</string>
    <string name="banner_ad_unit_id">ca-app-pub-6048897646109743/5149690114</string>
    <string name="title_activity_settings">Settings</string>
    <string name="instructions_hello">"Hello!"</string>
    <string name="instructions_button">"Let's Move"</string>
    <string name="instructions_content_1">"Android is a mobile operating system developed by Google, based on the Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. Android's user interface is mainly based on direct manipulation, using touch gestures that loosely correspond to real-world actions, such as swiping, tapping and pinching, to manipulate on-screen objects, along with a virtual keyboard for text input. In addition to touchscreen devices, Google has further developed Android TV for televisions, Android Auto for cars, and Android Wear for wrist watches, each with a specialized user interface. Variants of Android are also used on notebooks, game consoles, digital cameras, and other electronics.
Android has the largest installed base of all operating systems of any kind.[b] Android has been the best selling OS on tablets since 2013, and on smartphones it is dominant by any metric.[14][15]
Initially developed by Android, Inc., which Google bought in 2005,[16] Android was unveiled in 2007 along with the founding of the Open Handset Alliance – a consortium of hardware, software, and telecommunication companies devoted to advancing open standards for mobile devices.[17] As of July 2013, the Google Play store has had over one million Android applications  published – including many [18] that rival competing mobile platforms[19] – and over 50 billion applications downloaded.[20] An April–May 2013 survey of mobile application developers found that 71% of developers create applications for Android,[21] and a 2015 survey found that 40% of full-time professional developers see Android as their priority target platform, which is comparable to Apple's iOS on 37% with both platforms far above others.[22] In September 2015, Android had 1.4 billion monthly active users.[23]

Android's source code is released by Google under open source licenses, although most Android devices ultimately ship with a combination of open source and proprietary software, including proprietary software required for accessing Google services.[3] Android is popular with technology companies that require a ready-made, low-cost and customizable operating system for high-tech devices.[24] At the same time, as Android has no centralised update system most Android devices fail to receive security updates: research in 2015, concluded that almost 90% of Android phones in use had known but unpatched security vulnerabilities due to lack of updates and support.[25][26] Its open nature has encouraged a large community of developers and enthusiasts to use the open-source code as a foundation for community-driven projects, which deliver updates to older devices, add new features for advanced users[27] or bring Android to devices originally shipped with other operating systems. The success of Android has made it a target for patent (and copyright) litigation as part of the so-called  between technology companies Android is a mobile operating system developed by Google, based on the Linux kernel and designed primarily for touchscreen mobile devices such as smartphones and tablets. Android's user interface is mainly based on direct manipulation, using touch gestures that loosely correspond to real-world actions, such as swiping, tapping and pinching, to manipulate on-screen objects, along with a virtual keyboard for text input. In addition to touchscreen devices, Google has further developed Android TV for televisions, Android Auto for cars, and Android Wear for wrist watches, each with a specialized user interface. Variants of Android are also used on notebooks, game consoles, digital cameras, and other electronics
Android has the largest installed base of all operating systems of any kind.[b] Android has been the best selling OS on tablets since 2013, and on smartphones it is dominant by any metric.[14][15]

Initially developed by Android, Inc., which Google bought in 2005,[16] Android was unveiled in 2007 along with the founding of the Open Handset Alliance – a consortium of hardware, software, and telecommunication companies devoted to advancing open standards for mobile devices.[17] As of July 2013, the Google Play store has had over one million Android applications  published – including many [18] that rival competing mobile platforms[19] – and over 50 billion applications downloaded.[20] An April–May 2013 survey of mobile application developers found that 71% of developers create applications for Android,[21] and a 2015 survey found that 40% of full-time professional developers see Android as their priority target platform, which is comparable to Apple's iOS on 37% with both platforms far above others.[22] In September 2015, Android had 1.4 billion monthly active users.[23]

Android's source code is released by Google under open source licenses, although most Android devices ultimately ship with a combination of open source and proprietary software, including proprietary software required for accessing Google services.[3] Android is popular with technology companies that require a ready-made, low-cost and customizable operating system for high-tech devices.[24] At the same time, as Android has no centralised update system most Android devices fail to receive security updates: research in 2015, concluded that almost 90% of Android phones in use had known but unpatched security vulnerabilities due to lack of updates and support.[25][26] Its open nature has encouraged a large community of developers and enthusiasts to use the open-source code as a foundation for community-driven projects, which deliver updates to older devices, add new features for advanced users[27] or bring Android to devices originally shipped with other operating systems. The success of Android has made it a target for patent (and copyright) litigation as part of the so-called between technology companies"
    </string>
    <string name="not_available">"N/A"</string>
    <string name="tilde_2">"~~"</string>
    <string name="tilde_4">"~~~~"</string>
    <string name="tilde_5">"~~~~~"</string>
    <string name="hyphen_4">"----"</string>
    <string name="hyphen_5">"-----"</string>
    <string name="reset">"Reset"</string>
    <string name="km">"km"</string>
    <string name="mi">"mi"</string>
    <string name="mt">"mt"</string>
    <string name="km_hr">"km/hr"</string>
    <string name="mi_hr">"mi/hr"</string>
    <string name="mt_sec">"mt/sc"</string>
    <string name="latitude">"Latitude"</string>
    <string name="longitude">"Longitude</string>
    <string name="altitude">"Altitude (above MSL)"</string>
    <string name="direction">"Direction"</string>
</resources>
