<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <com.quintlr.speedometer.Fonts.ValuesTextView
        android:id="@+id/speedobg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/speedo_font_size"
        android:text="@string/tilde_4"
        android:maxLines="1"
        android:textColor="@color/lcdbg"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guideline"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp" />

    <com.quintlr.speedometer.Fonts.ValuesTextView
        android:id="@+id/speedo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:textSize="@dimen/speedo_font_size"
        android:gravity="right"
        android:text="@string/hyphen_4"
        app:layout_constraintLeft_toLeftOf="@id/speedobg"
        app:layout_constraintTop_toTopOf="@+id/speedobg"
        app:layout_constraintRight_toRightOf="@id/speedobg"/>

    <com.quintlr.speedometer.Fonts.UnitsTextView
        android:id="@+id/speedounitsbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilde_5"
        android:textColor="@color/lcdbg"
        android:textSize="@dimen/speedo_units_font_size"
        android:maxLines="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/speedobg" />

    <com.quintlr.speedometer.Fonts.UnitsTextView
        android:id="@+id/speedounits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km_hr"
        android:maxLines="1"
        android:textSize="@dimen/speedo_units_font_size"
        app:layout_constraintTop_toTopOf="@id/speedounitsbg"
        app:layout_constraintLeft_toLeftOf="@id/speedounitsbg"/>

    <com.quintlr.speedometer.Fonts.ValuesTextView
        android:id="@+id/odobg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilde_5"
        android:textColor="@color/lcdbg"
        android:textSize="@dimen/odo_font_size"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@+id/speedobg"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <com.quintlr.speedometer.Fonts.ValuesTextView
        android:id="@+id/odo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hyphen_5"
        android:gravity="right"
        android:textSize="@dimen/odo_font_size"
        android:maxLines="1"
        app:layout_constraintLeft_toLeftOf="@id/odobg"
        app:layout_constraintTop_toTopOf="@id/odobg"
        app:layout_constraintRight_toRightOf="@id/odobg"/>

    <com.quintlr.speedometer.Fonts.UnitsTextView
        android:id="@+id/odounitsbg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilde_2"
        android:textColor="@color/lcdbg"
        android:maxLines="1"
        android:textSize="@dimen/odo_units_font_size"
        app:layout_constraintLeft_toRightOf="@id/guideline2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/odobg"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.5" />

    <com.quintlr.speedometer.Fonts.UnitsTextView
        android:id="@+id/odounits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:textSize="@dimen/odo_units_font_size"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="@id/odounitsbg"
        app:layout_constraintLeft_toLeftOf="@id/odounitsbg" />

    <View
        android:id="@+id/speedo_sep_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/pureWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedounitsbg"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/reset"
        android:textSize="@dimen/reset_btn_font"
        android:shadowDx="0"
        android:shadowDy="0"
        android:textColor="@color/pitchBlack"
        android:background="@drawable/reset_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintBottom_toTopOf="@+id/speedo_sep_horizontal" />

</android.support.constraint.ConstraintLayout>