<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_mid_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="206dp" />

    <TextView
        android:id="@+id/lat_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintRight_toLeftOf="@+id/vertical_mid_guideline"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/lon_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/longitude"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintTop_toBottomOf="@+id/lat_textView" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/not_available"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/lat_textView" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/not_available"
        app:layout_constraintBaseline_toBaselineOf="@+id/lon_textView"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/alt_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altitude"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertical_mid_guideline"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/lon_textView"
        app:layout_constraintHorizontal_bias="0.542" />

    <TextView
        android:id="@+id/altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/not_available"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/alt_textView"
        app:layout_constraintHorizontal_bias="0.503" />

    <TextView
        android:id="@+id/dir_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/direction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintTop_toBottomOf="@+id/alt_textView" />

    <TextView
        android:id="@+id/direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/not_available"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_mid_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/dir_textView"
        app:layout_constraintHorizontal_bias="0.504" />

</android.support.constraint.ConstraintLayout>